# libsnark

./: .gitignore  .gitmodules  CMakeLists.txt
depends/: CMakeLists.txt
libsnark/: CMakeLists.txt
libsnark/common/data_structures/: integer_permutation.cpp  sparse_vector.tcc
libsnark/gadgetlib1/gadgets/cpu_checkers/tinyram/: tinyram_cpu_checker.tcc
libsnark/gadgetlib1/gadgets/hashes/knapsack/: knapsack_gadget.tcc
libsnark/gadgetlib1/gadgets/verifiers/tests/: test_r1cs_ppzksnark_verifier_gadget.cpp
libsnark/gadgetlib2/: adapters.cpp
libsnark/knowledge_commitment/: kc_multiexp.tcc  knowledge_commitment.hpp
libsnark/reductions/ram_to_r1cs/gadgets/: ram_universal_gadget.tcc
libsnark/reductions/tbcs_to_uscs/: tbcs_to_uscs.tcc
libsnark/relations/arithmetic_programs/sap/tests/: test_sap.cpp
libsnark/relations/circuit_satisfaction_problems/bacs/examples/: bacs_examples.hpp
libsnark/relations/constraint_satisfaction_problems/r1cs/: r1cs.tcc
libsnark/relations/constraint_satisfaction_problems/uscs/examples/: uscs_examples.hpp
libsnark/zk_proof_systems/pcd/r1cs_pcd/r1cs_mp_ppzkpcd/: mp_pcd_circuits.tcc
libsnark/zk_proof_systems/ppzkadsnark/r1cs_ppzkadsnark/: r1cs_ppzkadsnark.tcc
libsnark/zk_proof_systems/ppzksnark/r1cs_gg_ppzksnark/: r1cs_gg_ppzksnark.hpp  r1cs_gg_ppzksnark.tcc
libsnark/zk_proof_systems/ppzksnark/r1cs_ppzksnark/: r1cs_ppzksnark.hpp  r1cs_ppzksnark.tcc
libsnark/zk_proof_systems/ppzksnark/r1cs_se_ppzksnark/: r1cs_se_ppzksnark.tcc
libsnark/zk_proof_systems/ppzksnark/uscs_ppzksnark/: uscs_ppzksnark.tcc
(+3 files in other folders)
